# post-varloc-data-pipeline

./: .gitignore  Makefile  README.md  config.ini  config.yaml  default_slurm_tsv_zarr.sh  environment.yml  example.env  pyproject.toml
contrib/: environment.yml.backup_20250304  environment.yml.mod  environment_sgkit_env.yml  run_processing.sh  slurm_request_open_terminal.sh  slurm_request_open_terminal_4CPU.sh  slurm_run_processing.sh  test_script.sh
contrib/20250118_retest/: run_processing.sh  slurm-19610495.out  slurm_run_processing.sh
docs/: mkdocs.yml
docs/docs/: index.md
models/: datalink.py
post_varloc_data_pipeline/: Snakefile  __init__.py  additional_zarr_filtering.py  config.py  data_grouping.py  data_transformation.py  dataset.py  eunc_data_transformation.py  extract_ann_types.py  features.py  plots.py  slurm_tsv_preprocess_to_zarr.sh  slurm_vembrane_processing.sh  slurm_vembrane_tsv_to_zarr.sh  tsv_preprocess_to_zarr.py  tsv_to_zarr.py  tsv_to_zarr_output.py  vembrane_processing.sh  vembrane_tsv_to_zarr.py  zarr_groupby_aggregator.py  zarr_pivot_creator.py
references/: 20250529_GeneCards-stuttering.csv  20250717_combined_gene_info.tsv  column_names.csv  combined_ann_dtypes.csv  mapping.csv  paper_and_2024_combined_reformatted_for_search.xlsx  snpeff_ann_dtypes.csv  vep_ann_dtypes.csv
scripts/: debug_config.py  debug_simple.py  get_config_value.py  run_vembrane_test.sh  test_row_count_fix.py
tests/: test_bed_filtering.py  test_combined_filtering.py  test_config.yaml  test_config_parser.py  test_gene_filter.py  test_gene_filter.tsv
(+9 files in other folders)
