[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "post_varloc_data_pipeline"
version = "0.0.1"
description = "Data processing after using the snakemake workflow dna-seq-varlociraptor."
authors = [
  { name = "Jim Delproposto" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["post_varloc_data_pipeline"]
force_sort_within_sections = true
